logs/execution_1772338336.log
--- Starting Agent Life at Sun Mar  1 04:12:16 UTC 2026 ---

> bootstrap-v17@1.0.0 start
> npx tsx src/index.ts

<anonymous_script>:18
}inutes": 120
 ^

SyntaxError: Unexpected non-whitespace character after JSON at position 389 (line 18 column 2)
    at JSON.parse (<anonymous>)
    at TaskTracker.loadTasks (/home/bootstrap-v17/bootstrap/src/task_tracker.ts:498:27)
    at new TaskTracker (/home/bootstrap-v17/bootstrap/src/task_tracker.ts:57:10)
    at <anonymous> (/home/bootstrap-v17/bootstrap/src/task_tracker.ts:531:28)
    at ModuleJob.run (node:internal/modules/esm/module_job:413:25)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:660:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v24.13.0
--- Agent Process Exited with code 0 after 4s ---
[WATCHDOG] Rapid exit detected (4 s). Failure count: 1. Initiating Surgical Restore...
[WATCHDOG] Code failure is UNCOMMITTED. Wiping Body changes to current HEAD...
[WATCHDOG] Body surgically restored (Mind preserved). Cooling down...
